2010-07-02  Christian Borntraeger  <borntraeger@de.ibm.com>

	* config/s390/s390.c (override_options): Adopt prefetching
	at -O3 to handle flag_prefetch_loop_arrays as a tristate.

2010-07-02  Jan Hubicka  <jh@suse.cz>

	* df-problems.c (df_kill_notes): Do not collect dead  notes.
	(df_set_note): Just call add_reg_note.
	(df_set_unused_notes_for_mw, df_set_dead_notes_for_mw,
	df_create_unused_note): Do not deal with lists of old notes.
	(df_note_bb_compute): Likewise.

2010-07-02  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-structalias.c (find_func_aliases): Handle
	pointer alignment via BIT_AND_EXPR.
	* tree-vrp.c (extract_range_from_binary_expr): Likewise.

2010-07-02  Richard Guenther  <rguenther@suse.de>

	* tree-data-ref.c (initialize_data_dependence_relation): Handle
	mismatching number of dimensions properly.

2010-07-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	PR target/44707
	* config/rs6000/rs6000.c (rs6000_legitimize_reload_address): Recognize
	(lo_sum (high ...) ...) patterns generated by earlier passes.

2010-07-02  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/install.texi (Prerequisites): Document Perl requirement on
	Solaris 2.
	(Specific, *-*-solaris2*): Document GNU c++filt requirement.

2010-07-02  Richard Guenther  <rguenther@suse.de>

	PR middle-end/44777
	* tree-cfg.c (gimple_block_ends_with_call_p): Handle empty BBs.

2010-07-02  Jan Hubicka  <jh@suse.cz>

	PR middle-end/44706
	* predict.c (predict_paths_for_bb): Handle case when control dependence
	BB has only abnormal edges.

2010-07-02  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44748
	* tree-ssa-ccp.c (fold_const_aggregate_ref): Properly handle
	the embedded conversion in MEM_REFs.

2010-07-01  López-Ibáñez  <manu@gcc.gnu.org>

	* reload.c: Include toplev.h.
	* recog.c:  Likewise.
	* Makefile.in: Adjust dependencies.

2010-07-01  Jakub Jelinek  <jakub@redhat.com>

	PR debug/44694
	* dwarf2out.c (reg_loc_descriptor): For eliminated arg_pointer_rtx